# promptcfg

./: .gitignore  MANIFEST.in  README.md  config.yaml  main.py  pyproject.toml
promptcfg/: builder.py  cli.py
prompter/: builder.py  cli.py  config.py  ids.py
tests/: test_builder.py  test_custom_config.py  test_dynamic_builder.py  test_validation.py
